--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       crossorigin="anonymous"
     />
 
+    
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
@@ -18,44 +19,55 @@
     ></script>
 
     <link rel="stylesheet" href="css/styles.css" />
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
   </head>
 
   <body>
     <section id="title">
-      <!-- Nav Bar -->
+      <div class="container-fluid">
+        <!-- Nav Bar -->
 
-      <nav class="navbar navbar-expand-lg navbar-dark">
-        <a class="navbar-brand" href="">tindog</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarToggleExternalContent"
-          aria-controls="navbarToggleExternalContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarToggleExternalContent">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item"><a class="nav-link" href="">Contact</a></li>
-            <li class="nav-item"><a class="nav-link" href="">Pricing</a></li>
-            <li class="nav-item"><a class="nav-link" href="">Download</a></li>
-          </ul>
-        </div>
-      </nav>
+        <nav class="navbar navbar-expand-lg navbar-dark">
+          <a class="navbar-brand" href="">tindog</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarToggleExternalContent"
+            aria-controls="navbarToggleExternalContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div
+            class="collapse navbar-collapse"
+            id="navbarToggleExternalContent"
+          >
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item"><a class="nav-link" href="">Contact</a></li>
+              <li class="nav-item"><a class="nav-link" href="">Pricing</a></li>
+              <li class="nav-item"><a class="nav-link" href="">Download</a></li>
+            </ul>
+          </div>
+        </nav>
 
-      <!-- Title -->
+        <!-- Title -->
 
-      <div class="row">
-        <div class="col-lg-6">
-          <h1>Meet new and interesting dogs nearby.</h1>
-          <button type="button">Download</button>
-          <button type="button">Download</button>
-        </div>
-        <div class="col-lg-6">
-          <img src="images/iphone6.png" alt="iphone-mockup" />
+        <div class="row">
+          <div class="col-lg-6">
+            <h1>Meet new and interesting dogs nearby.</h1>
+            <button class="btn btn-dark btn-lg download-btn" type="button">
+              <i class="fa-brands fa-apple"></i> Download
+            </button>
+            <button class="btn btn-outline-light btn-lg download-btn" type="button">
+              <i class="fa-brands fa-google-play"></i> Download
+            </button>
+          </div>
+          <div class="col-lg-6">
+            <img class="title-img" src="images/iphone6.png" alt="iphone-mockup" />
+          </div>
         </div>
       </div>
     </section>
