--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
       crossorigin="anonymous"
     />
 
-    
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
@@ -20,7 +19,10 @@
 
     <link rel="stylesheet" href="css/styles.css" />
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+    />
   </head>
 
   <body>
@@ -61,12 +63,19 @@
             <button class="btn btn-dark btn-lg download-btn" type="button">
               <i class="fa-brands fa-apple"></i> Download
             </button>
-            <button class="btn btn-outline-light btn-lg download-btn" type="button">
+            <button
+              class="btn btn-outline-light btn-lg download-btn"
+              type="button"
+            >
               <i class="fa-brands fa-google-play"></i> Download
             </button>
           </div>
           <div class="col-lg-6">
-            <img class="title-img" src="images/iphone6.png" alt="iphone-mockup" />
+            <img
+              class="title-img"
+              src="images/iphone6.png"
+              alt="iphone-mockup"
+            />
           </div>
         </div>
       </div>
@@ -75,14 +84,25 @@
     <!-- Features -->
 
     <section id="features">
-      <h3>Easy to use.</h3>
-      <p>So easy to use, even your dog could do it.</p>
-
-      <h3>Elite Clientele</h3>
-      <p>We have all the dogs, the greatest dogs.</p>
-
-      <h3>Guaranteed to work.</h3>
-      <p>Find the love of your dog's life or your money back.</p>
+      <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-4 feature-box">
+          <i class="fa-solid fa-circle-check featuresicon"></i>
+          <h3 class="feature-head">Easy to use.</h3>
+          <p class="features-desc">So easy to use, even your dog could do it.</p>
+        </div>
+        <div class="col-md-4 feature-box">
+          <i class="fa-solid fa-bullseye featuresicon"></i>
+          <h3 class="feature-head">Elite Clientele</h3>
+          <p class="features-desc">We have all the dogs, the greatest dogs.</p>
+        </div>
+        <div class="col-md-4 feature-box">
+          <i class="fa-solid fa-heart featuresicon"></i>
+          <h3 class="feature-head">Guaranteed to work.</h3>
+          <p class="features-desc">Find the love of your dog's life or your money back.</p>
+        </div>
+      </div>
+      </div>
     </section>
 
     <!-- Testimonials -->
