--- a/index.html
+++ b/index.html
@@ -85,48 +85,101 @@
 
     <section id="features">
       <div class="container-fluid">
-      <div class="row">
-        <div class="col-md-4 feature-box">
-          <i class="fa-solid fa-circle-check featuresicon"></i>
-          <h3 class="feature-head">Easy to use.</h3>
-          <p class="features-desc">So easy to use, even your dog could do it.</p>
+        <div class="row">
+          <div class="col-md-4 feature-box">
+            <i class="fa-solid fa-circle-check featuresicon"></i>
+            <h3 class="feature-head">Easy to use.</h3>
+            <p class="features-desc">
+              So easy to use, even your dog could do it.
+            </p>
+          </div>
+          <div class="col-md-4 feature-box">
+            <i class="fa-solid fa-bullseye featuresicon"></i>
+            <h3 class="feature-head">Elite Clientele</h3>
+            <p class="features-desc">
+              We have all the dogs, the greatest dogs.
+            </p>
+          </div>
+          <div class="col-md-4 feature-box">
+            <i class="fa-solid fa-heart featuresicon"></i>
+            <h3 class="feature-head">Guaranteed to work.</h3>
+            <p class="features-desc">
+              Find the love of your dog's life or your money back.
+            </p>
+          </div>
         </div>
-        <div class="col-md-4 feature-box">
-          <i class="fa-solid fa-bullseye featuresicon"></i>
-          <h3 class="feature-head">Elite Clientele</h3>
-          <p class="features-desc">We have all the dogs, the greatest dogs.</p>
-        </div>
-        <div class="col-md-4 feature-box">
-          <i class="fa-solid fa-heart featuresicon"></i>
-          <h3 class="feature-head">Guaranteed to work.</h3>
-          <p class="features-desc">Find the love of your dog's life or your money back.</p>
-        </div>
-      </div>
       </div>
     </section>
 
     <!-- Testimonials -->
 
     <section id="testimonials">
-      <h2>
-        I no longer have to sniff other dogs for love. I've found the hottest
-        Corgi on TinDog. Woof.
-      </h2>
-      <img src="images/dog-img.jpg" alt="dog-profile" />
-      <em>Pebbles, New York</em>
+      <div id="testimonialCarousel" class="carousel slide">
+        <div class="carousel-indicators">
+          <button
+            type="button"
+            data-bs-target="#testimonialCarousel"
+            data-bs-slide-to="0"
+            class="active"
+            aria-current="true"
+            aria-label="Slide 1"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#testimonialCarousel"
+            data-bs-slide-to="1"
+            aria-label="Slide 2"
+          ></button>
+        </div>
 
-      <!-- <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
-    <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
-    <em>Beverly, Illinois</em> -->
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <h2>
+              I no longer have to sniff other dogs for love. I've found the
+              hottest Corgi on TinDog. Woof.
+            </h2>
+            <img
+              class="testimonial-image"
+              src="images/dog-img.jpg"
+              alt="dog-profile"
+            />
+            <em class="dog-name">Pebbles, New York</em>
+          </div>
+          <div class="carousel-item">
+            <h2 class="testimonial-text">
+              My dog used to be so lonely, but with TinDog's help, they've found
+              the love of their life. I think.
+            </h2>
+            <img
+              class="testimonial-image"
+              src="images/lady-img.jpg"
+              alt="lady-profile"
+            />
+            <em class="dog-name">Beverly, Illinois</em>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#testimonialCarousel" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#testimonialCarousel" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
     </section>
 
     <!-- Press -->
 
     <section id="press">
-      <img src="images/techcrunch.png" alt="tc-logo" />
-      <img src="images/tnw.png" alt="tnw-logo" />
-      <img src="images/bizinsider.png" alt="biz-insider-logo" />
-      <img src="images/mashable.png" alt="mashable-logo" />
+      <img class="press-icon" src="images/techcrunch.png" alt="tc-logo" />
+      <img class="press-icon" src="images/tnw.png" alt="tnw-logo" />
+      <img
+        class="press-icon"
+        src="images/bizinsider.png"
+        alt="biz-insider-logo"
+      />
+      <img class="press-icon" src="images/mashable.png" alt="mashable-logo" />
     </section>
 
     <!-- Pricing -->
