--- a/ask_her_out.html
+++ b/ask_her_out.html
@@ -6,7 +6,7 @@
   <body>
     <div class="container">
       <div>
-        <h1 class="header_text">Do you wanna go out with me?</h1>
+        <h1 class="header_text">Can i take you out on a date?</h1>
         <h1 class="header_text">Are you free this weekend?</h1>
       </div>
       <div class="gif_container">
